test/sparse/bradc/parIter/spsZipper2.good
spsZipper2.chpl:12: warning: parallel iteration over sparse domain has been serialized (see note in $CHPL_HOME/STATUS)
spsZipper2.chpl:12: error: halt reached - Sparse domains can't be zippered with anything other than themselves and their arrays
